# MarpEditor

./: .gitignore  AGENTS.md  CODE_REVIEW.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-presentation.cjs  test_presentation.py  vite.config.ts
.github/workflows/: release.yml  update-package-managers.yml
scripts/: install.sh  setup-package-repos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EditorPanel.tsx  ErrorBoundary.tsx  ExportModal.tsx  PresentationMode.tsx  PreviewPanel.tsx  StylePanel.tsx  Toolbar.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: imageDb.ts  storage.ts  store.ts  utils.test.ts  utils.ts
src/types/: index.ts
