[package]
name = "marpeditor"
version = "0.1.2"
description = "Desktop shell for MarpEditor"
authors = ["MarpEditor contributors"]
edition = "2021"

[lib]
name = "marpeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
